Added base for Slash Commands
HandleSlashCommands class created containing 2 necessary functions "defineAllSlashCommands", and "startHandlingSlashCommands."

The commands I added are:
/meaning
/set meaning
/dictionary
/remove reaction

permissions are now set for each command